[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robust_xgboost"
version = "1.0.0"
description = "A robust implementation of XGBoost with enhanced decision tree algorithms"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Atri Sharma"},
]
keywords = ["machine learning", "xgboost", "decision trees", "robust", "ensemble"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
    "xgboost>=2.1.0",
    "numba>=0.60.0",
    "openml>=0.15.0",
    "gurobipy>=11.0.0",
    "tqdm>=4.66.0",
    "openml>=0.15.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "black>=24.8.0",
    "flake8>=7.1.0",
    "mypy>=1.11.0",
]

[project.urls]
Homepage = "https://github.com/your-username/robustxgboost"

[tool.hatch.build.targets.wheel]
packages = ["robust_xgboost"]

[tool.hatch.build.targets.sdist]
include = [
    "robust_xgboost/",
    "README.md",
    "LICENSE",
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
